--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         // Settings for the compiler
         "outDir": "./dist/",
         "sourceMap": true,
-        "target": "es2015",
+        "target": "ES2022",
         "module": "ESNext",
     
         // Rules for your code
